feat: Add multi-currency support for position values, including a currency selector, min/max filters, and a new table column for converted values.

--- a/whale_dashboard.html
+++ b/whale_dashboard.html
@@ -636,6 +636,31 @@
         </div>
         <div class="filter-sep"></div>
         <div class="ctrl">
+            <label>Currency</label>
+            <select id="currencySelect" onchange="onCurrencyChange()" style="width:80px">
+                <option value="USD">USD $</option>
+                <option value="BRL">BRL R$</option>
+                <option value="EUR">EUR €</option>
+                <option value="GBP">GBP £</option>
+                <option value="JPY">JPY ¥</option>
+                <option value="ARS">ARS $</option>
+                <option value="CAD">CAD $</option>
+                <option value="AUD">AUD $</option>
+                <option value="BTC">BTC ₿</option>
+            </select>
+        </div>
+        <div class="ctrl">
+            <label id="minValueCcyLabel">Min Value ($)</label>
+            <input type="number" id="minValueCcy" value="" step="100000" min="0" placeholder="Any" style="width:120px"
+                oninput="renderTable()">
+        </div>
+        <div class="ctrl">
+            <label id="maxValueCcyLabel">Max Value ($)</label>
+            <input type="number" id="maxValueCcy" value="" step="100000" min="0" placeholder="Any" style="width:120px"
+                oninput="renderTable()">
+        </div>
+        <div class="filter-sep"></div>
+        <div class="ctrl">
             <label>Sort PnL window</label>
             <div class="tabs">
                 <button class="tab active" data-window="allTime" onclick="setWindow(this)">All Time</button>
@@ -683,6 +708,7 @@
                     <th id="th-szi" onclick="sortBy('szi')">Size ↕</th>
                     <th>Leverage</th>
                     <th id="th-positionValue" onclick="sortBy('positionValue')">Value ↕</th>
+                    <th id="th-valueCcy" onclick="sortBy('valueCcy')" style="color:var(--gold)">Value (CCY) ↕</th>
                     <th id="th-entryPx" onclick="sortBy('entryPx')">Avg Entry ↕</th>
                     <th id="th-unrealizedPnl" onclick="sortBy('unrealizedPnl')">UPNL ↕</th>
                     <th id="th-funding" onclick="sortBy('funding')">Funding ↕</th>
@@ -692,7 +718,7 @@
             </thead>
             <tbody id="tableBody">
                 <tr>
-                    <td colspan="11" class="empty-cell">
+                    <td colspan="12" class="empty-cell">
                         <div class="empty-icon">🐋</div>
                         <div>Click <strong>Scan Whales</strong> to load data</div>
                     </td>
@@ -708,6 +734,7 @@
     <script>
         const INFO_URL = 'https://api.hyperliquid.xyz/info';
         const LEADERBOARD_URL = 'https://stats-data.hyperliquid.xyz/Mainnet/leaderboard';
+        const FX_URL = 'https://open.er-api.com/v6/latest/USD';
 
         // State
         let whaleList = [];       // from leaderboard
@@ -718,6 +745,74 @@
         let activeWindow = 'allTime';
         let loadedCount = 0;
         let scanning = false;
+
+        // Currency conversion
+        const CURRENCY_META = {
+            USD: { symbol: '$', locale: 'en-US' },
+            BRL: { symbol: 'R$', locale: 'pt-BR' },
+            EUR: { symbol: '€', locale: 'de-DE' },
+            GBP: { symbol: '£', locale: 'en-GB' },
+            JPY: { symbol: '¥', locale: 'ja-JP' },
+            ARS: { symbol: '$', locale: 'es-AR' },
+            CAD: { symbol: 'CA$', locale: 'en-CA' },
+            AUD: { symbol: 'A$', locale: 'en-AU' },
+            BTC: { symbol: '₿', locale: 'en-US' },
+        };
+        let fxRates = { USD: 1 };   // USD-based rates, fetched once
+        let fxReady = false;
+        let activeCurrency = 'USD';
+
+        async function fetchExchangeRates() {
+            try {
+                const resp = await fetch(FX_URL);
+                const data = await resp.json();
+                if (data.rates) {
+                    fxRates = data.rates;
+                    fxRates.USD = 1;
+                    fxReady = true;
+                }
+            } catch (e) {
+                console.warn('FX fetch failed, defaulting to USD', e);
+                fxReady = true; // proceed with USD=1
+            }
+        }
+
+        function convertToActiveCcy(usdValue) {
+            if (activeCurrency === 'BTC') {
+                const btcPrice = parseFloat(currentPrices['BTC'] || 0);
+                return btcPrice > 0 ? usdValue / btcPrice : 0;
+            }
+            const rate = fxRates[activeCurrency] ?? 1;
+            return usdValue * rate;
+        }
+
+        function fmtCcy(value) {
+            const meta = CURRENCY_META[activeCurrency] || CURRENCY_META.USD;
+            const abs = Math.abs(value);
+            const sign = value >= 0 ? '' : '-';
+
+            if (activeCurrency === 'BTC') {
+                return sign + meta.symbol + abs.toFixed(abs >= 1 ? 4 : 8);
+            }
+
+            if (abs >= 1e9) return sign + meta.symbol + (abs / 1e9).toFixed(2) + 'B';
+            if (abs >= 1e6) return sign + meta.symbol + (abs / 1e6).toFixed(2) + 'M';
+            if (abs >= 1e3) return sign + meta.symbol + (abs / 1e3).toFixed(1) + 'K';
+            return sign + meta.symbol + abs.toFixed(0);
+        }
+
+        function onCurrencyChange() {
+            activeCurrency = document.getElementById('currencySelect').value;
+            const meta = CURRENCY_META[activeCurrency] || CURRENCY_META.USD;
+            const sym = meta.symbol;
+            // Update column header
+            const th = document.getElementById('th-valueCcy');
+            if (th) th.textContent = `Value (${activeCurrency}) ↕`;
+            // Update filter labels
+            document.getElementById('minValueCcyLabel').textContent = `Min Value (${sym})`;
+            document.getElementById('maxValueCcyLabel').textContent = `Max Value (${sym})`;
+            renderTable();
+        }
         // Rate limit: 1200 weight/min, clearinghouseState = weight 2 → max 600 req/min = 10 req/s
         // We use 8 concurrent requests to stay safely under the limit.
         const MAX_CONCURRENCY = 8;
@@ -788,7 +883,7 @@
         async function startScan() {
             const minVal = parseFloat(document.getElementById('minValue').value) || 2500000;
             document.getElementById('scanBtn').disabled = true;
-            document.getElementById('tableBody').innerHTML = `<tr><td colspan="11" class="empty-cell"><span class="spinner"></span> Fetching leaderboard…</td></tr>`;
+            document.getElementById('tableBody').innerHTML = `<tr><td colspan="12" class="empty-cell"><span class="spinner"></span> Fetching leaderboard…</td></tr>`;
             allRows = [];
             loadedCount = 0;
 
@@ -796,10 +891,11 @@
             setProgress(5);
 
             try {
-                // Fetch leaderboard + prices in parallel
+                // Fetch leaderboard + prices + FX rates in parallel
                 const [lbResp] = await Promise.all([
                     fetch(LEADERBOARD_URL),
-                    fetchAllMids()
+                    fetchAllMids(),
+                    fetchExchangeRates()
                 ]);
                 if (!lbResp.ok) throw new Error(`Leaderboard HTTP ${lbResp.status}`);
                 const lbData = await lbResp.json();
@@ -811,7 +907,8 @@
                     .sort((a, b) => parseFloat(b.accountValue) - parseFloat(a.accountValue));
 
                 setProgress(15);
-                setStatus(`Found ${whaleList.length} whales. Loading positions…`, 'scanning');
+                const fxStatus = fxReady ? `FX: 1 USD = ${(fxRates[activeCurrency] ?? 1).toFixed(2)} ${activeCurrency}` : '';
+                setStatus(`Found ${whaleList.length} whales. Loading positions… ${fxStatus}`, 'scanning');
 
                 // Start the concurrency-limited streaming loader
                 scanning = true;
@@ -819,7 +916,7 @@
 
             } catch (e) {
                 console.error(e);
-                document.getElementById('tableBody').innerHTML = `<tr><td colspan="11" class="empty-cell" style="color:var(--red)">Error: ${e.message}</td></tr>`;
+                document.getElementById('tableBody').innerHTML = `<tr><td colspan="12" class="empty-cell" style="color:var(--red)">Error: ${e.message}</td></tr>`;
                 setStatus('Error', 'error');
                 document.getElementById('scanBtn').disabled = false;
             }
@@ -1008,6 +1105,8 @@
             const minSize = parseFloat(document.getElementById('minSize').value);
             const minFunding = parseFloat(document.getElementById('minFunding').value);
             const levTypeFilter = document.getElementById('levTypeFilter').value;
+            const minValueCcy = parseFloat(document.getElementById('minValueCcy').value);
+            const maxValueCcy = parseFloat(document.getElementById('maxValueCcy').value);
 
             let rows = allRows.filter(r => {
                 if (coinFilter && r.coin !== coinFilter) return false;
@@ -1017,6 +1116,9 @@
                 if (!isNaN(minSize) && r.positionValue < minSize) return false;
                 if (!isNaN(minFunding) && Math.abs(r.funding) < minFunding) return false;
                 if (levTypeFilter && r.leverageType !== levTypeFilter) return false;
+                const ccyVal = convertToActiveCcy(r.positionValue);
+                if (!isNaN(minValueCcy) && ccyVal < minValueCcy) return false;
+                if (!isNaN(maxValueCcy) && ccyVal > maxValueCcy) return false;
                 return true;
             });
 
@@ -1027,6 +1129,9 @@
                     return sortDir * a.coin.localeCompare(b.coin);
                 } else if (sortKey === 'funding') {
                     va = a.funding; vb = b.funding;
+                } else if (sortKey === 'valueCcy') {
+                    va = convertToActiveCcy(a.positionValue);
+                    vb = convertToActiveCcy(b.positionValue);
                 } else {
                     va = a[sortKey] ?? 0;
                     vb = b[sortKey] ?? 0;
@@ -1038,7 +1143,7 @@
             const tbody = document.getElementById('tableBody');
 
             if (rows.length === 0) {
-                tbody.innerHTML = `<tr><td colspan="11" class="empty-cell"><div class="empty-icon">🔍</div><div>No positions match the current filters.</div></td></tr>`;
+                tbody.innerHTML = `<tr><td colspan="12" class="empty-cell"><div class="empty-icon">🔍</div><div>No positions match the current filters.</div></td></tr>`;
                 return;
             }
 
@@ -1072,6 +1177,9 @@
                 const absSzi = Math.abs(r.szi);
                 const sziStr = absSzi >= 1 ? absSzi.toFixed(4) : absSzi.toFixed(6);
 
+                const ccyVal = convertToActiveCcy(r.positionValue);
+                const ccyStr = fmtCcy(ccyVal);
+
                 return `<tr>
                 <td class="muted" style="font-size:11px">${i + 1}</td>
                 <td>
@@ -1091,7 +1199,8 @@
                 <td class="mono">${sziStr}</td>
                 <td><span class="lev-badge">${levLabel}</span></td>
                 <td class="mono">$${fmt(r.positionValue)}</td>
-                <td class="mono">$${r.entryPx.toLocaleString('en-US', { maximumFractionDigits: 2 })}</td>
+                <td class="mono" style="color:var(--gold);font-weight:600">${ccyStr}</td>
+                <td class="mono">${r.entryPx.toLocaleString('en-US', { maximumFractionDigits: 2 })}</td>
                 <td class="mono ${pnlClass}" style="font-weight:600">${fmtUSD(r.unrealizedPnl)}</td>
                 <td class="mono ${fundClass}">${fmtUSD(r.funding)}</td>
                 <td>${distHtml}</td>
